all in spanish + images for band members

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Squadfree - Free bootstrap 3 one page template</title>
+    <title>Shunt</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <h1>SQUAD FREE</h1>
+                    <h1>Shunt</h1>
                 </a>
             </div>
 
@@ -42,17 +42,17 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#intro">Home</a></li>
-        <li><a href="#about">About</a></li>
-		<li><a href="#service">Service</a></li>
-		<li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
+        <li><a href="#about">Nosotros</a></li>
+		<li><a href="#service">Cosas</a></li>
+		<li><a href="#contact">Contacto</a></li>
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
             <li><a href="#">Example menu</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -64,8 +64,8 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<h2>WELCOME TO <span class="text_color">SQUAD</span> </h2>
-			<h4>WE ARE GROUP OF GENTLEMEN MAKING AWESOME WEB WITH BOOTSTRAP</h4>
+			<h2><span class="text_color">Shunt</span> </h2>
+			<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
@@ -83,7 +83,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>About us</h2>
+					<h2>Nosotros</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -104,8 +104,8 @@
 				<div class="wow bounceInUp" data-wow-delay="0.2s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Anna Hanaceck</h5>
-                        <p class="subtitle">Pixel Crafter</p>
+						<h5>Guille</h5>
+                        <p class="subtitle">Guitarra y voz</p>
                         <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
 				<div class="wow bounceInUp" data-wow-delay="0.5s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Maura Daniels</h5>
-                        <p class="subtitle">Ruby on Rails</p>
+						<h5>Viru</h5>
+                        <p class="subtitle">Guitarra y voz</p>
                         <div class="avatar"><img src="img/team/2.jpg" alt="" class="img-responsive img-circle" /></div>
 
                     </div>
@@ -127,8 +127,8 @@
 				<div class="wow bounceInUp" data-wow-delay="0.8s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Jack Briane</h5>
-                        <p class="subtitle">jQuery Ninja</p>
+						<h5>Fabri</h5>
+                        <p class="subtitle">Bajo y voz</p>
                         <div class="avatar"><img src="img/team/3.jpg" alt="" class="img-responsive img-circle" /></div>
 
                     </div>
@@ -139,8 +139,8 @@
 				<div class="wow bounceInUp" data-wow-delay="1s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Tom Petterson</h5>
-                        <p class="subtitle">Typographer</p>
+						<h5>Fer</h5>
+                        <p class="subtitle">Batería</p>
                         <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></div>
 
                     </div>
@@ -162,7 +162,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Our Services</h2>
+					<h2>Cosas</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -185,7 +185,7 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Print</h5>
+						<h5>Música</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -198,7 +198,7 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Web Design</h5>
+						<h5>Shows</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -211,7 +211,7 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Photography</h5>
+						<h5>Galería</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -224,7 +224,7 @@
 						<img src="img/icons/service-icon-4.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Cloud System</h5>
+						<h5>Info</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -246,7 +246,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Get in touch</h2>
+					<h2>Contacto</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -270,46 +270,46 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
-                                Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                                Nombre</label>
+                            <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre" required="required" />
                         </div>
                         <div class="form-group">
                             <label for="email">
-                                Email Address</label>
+                                Mail</label>
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
+                                <input type="email" class="form-control" id="email" placeholder="Ingresa tu mail" required="required" /></div>
                         </div>
                         <div class="form-group">
                             <label for="subject">
-                                Subject</label>
+                                Asunto</label>
                             <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
+                                <option value="na" selected="">Elegí uno:</option>
+                                <option value="service">Fans</option>
+                                <option value="suggestions">Contrataciones</option>
+                                <option value="product">Quejas</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
-                                Message</label>
+                                Mensaje</label>
                             <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
+                                placeholder="Mensaje"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                            Send Message</button>
+                            Enviar mensaje</button>
                     </div>
                 </div>
                 </form>
             </div>
         </div>
 		
-		<div class="col-lg-4">
+		<!-- <div class="col-lg-4">
 			<div class="widget-contact">
 				<h5>Main Office</h5>
 				
@@ -318,14 +318,14 @@
 				  Tower 795 Folsom Ave, Beautiful Suite 600<br>
 				  San Francisco, CA 94107<br>
 				  <abbr title="Phone">P:</abbr> (123) 456-7890
-				</address>
+				</address> -->
 
 				<address>
-				  <strong>Email</strong><br>
-				  <a href="mailto:#">email.name@example.com</a>
+				  <strong>Mail</strong><br>
+				  <a href="mailto:#">contacto.shunt@gmail.com</a>
 				</address>	
 				<address>
-				  <strong>We're on social networks</strong><br>
+				  <strong>Agreganos, seguinos, escuchanos, miranos!</strong><br>
                        	<ul class="company-social">
                             <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
