configure social icons and links + mail

--- a/index.html
+++ b/index.html
@@ -322,15 +322,18 @@
 
 				<address>
 				  <strong>Mail</strong><br>
-				  <a href="mailto:#">contacto.shunt@gmail.com</a>
+				  <a target="_blank" href="mailto:contacto.shunt@gmail.com" onclick="window.open('https://mail.google.com/mail/?view=cm&amp;tf=1&amp;to=contacto.shunt@gmail.com&amp;cc=&amp;bcc=&amp;su=&amp;body=','_blank');return false;">contacto.shunt@gmail.com</a>
+
+
+
 				</address>	
 				<address>
 				  <strong>Agreganos, seguinos, escuchanos, miranos!</strong><br>
                        	<ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                            <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                            <li class="social-facebook"><a href="https://www.facebook.com/shuntoficial/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li class="social-twitter"><a href="https://twitter.com/shunt_musica" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li class="social-dribble"><a href="https://soundcloud.com/shuntoficial" target="_blank"><i class="fa fa-music"></i></a></li>
+                            <li class="social-google"><a href="https://www.youtube.com/channel/UC55EJfR4J9cGdhS4mRpTHNQ" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
                         </ul>	
 				</address>					
 			
