buttons now scroll

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<div class="wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<a id="#music"><img src="img/icons/service-icon-1.png" alt="" /></a>
+						<img id = "imageMusic" src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Música</h5>
@@ -195,7 +195,7 @@
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-2.png" alt="" />
+						<img id = "imageShows" src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Shows</h5>
@@ -208,7 +208,7 @@
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<a id="#image"><img src="img/icons/service-icon-3.png" alt="" /></a>
+						<img id = "imageGallery" src="img/icons/service-icon-3.png" alt="" />
 						<!-- Check this, why if it says href change the direction bar? -->
 					</div>
 					<div class="service-desc">
@@ -222,7 +222,7 @@
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img id = "imageInfo" src="img/icons/service-icon-4.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Info</h5>
@@ -268,7 +268,7 @@
                 <div class="team boxed-grey">
                     <div class="inner">
 						
-						<iframe id = "soundcloud" width="800px" height="500px" scrolling="no" frameborder="no" 	src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/33795545&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+						<iframe id = "soundcloud" width="800px" height="600px" scrolling="no" frameborder="no" 	src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/33795545&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 			 
 
                     </div>
@@ -283,7 +283,7 @@
 	<!-- /Section: music -->
 
 	<!-- Section: image -->
-	<section id= "image" class="home-section text-center">
+	<section id= "gallery" class="home-section text-center">
 		<div class="heading-image">
 			<div class="container">
 			<div class="row">
@@ -474,7 +474,8 @@
 
     <!-- Core JavaScript Files -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!--<script src="js/bootstrap.min.js"></script>-->
+    <script src="js/bootstrap.js"></script>
     <script src="js/jquery.easing.min.js"></script>	
 	<script src="js/jquery.scrollTo.js"></script>
 	<script src="js/wow.min.js"></script>
