wip: expandable table

--- a/index.html
+++ b/index.html
@@ -281,6 +281,71 @@
 	</section>
 
 	<!-- /Section: music -->
+	<!-- Section: shows -->
+	<section id= "shows" class="home-section text-center">
+		<div class="heading-image">
+			<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<div class="wow bounceInDown" data-wow-delay="0.4s">
+					<div class="section-heading">
+					<h2>Shows</h2>
+					<i class="fa fa-2x fa-angle-down"></i>
+
+					</div>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-2 col-lg-offset-5">
+				<hr class="marginbot-50">
+			</div>
+		</div>
+        <div class="row">
+            <div class="text-center">
+				<div class="wow bounceInUp" data-wow-delay="0.2s">
+                <div class="team boxed-grey">
+                    <div class="inner">
+						
+						<!-- table -->
+			 			<table id = "showsDates" style="width:100%">
+						  	<tr>
+						    	<td>29 de marzo en El Emergente</td>
+						  	</tr>
+						  	<tr>
+								<td colspan="5">
+								<!-- additional custom info is here (for date 1) --> 
+								</td>
+							</tr>
+
+						  	<tr>
+						    	<td>25 de abril en La Vieja Guarida</td>
+						  	</tr>
+						  	<tr>
+								<td colspan="5">
+								<!-- additional custom info is here (for date 2) --> 
+								</td>
+							</tr>
+
+						</table>
+
+                    </div>
+                </div>
+				</div>
+            </div>
+			
+        </div>		
+		</div>
+	</section>		
+
+	<!--/Section: shows -->
+
+
 
 	<!-- Section: image -->
 	<section id= "gallery" class="home-section text-center">
@@ -481,6 +546,7 @@
 	<script src="js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
+    <script type="text/javascript" src="js/jExpand.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function(){
@@ -488,6 +554,13 @@
     });
 </script>
 
+
+
+
+
 </body>
 
 </html>
+
+
+
